--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     </div>
 
-    <script type = "text/javascript" src="app.js"></script>
+   <!--<script type = "text/javascript" src="app.js"></script> --> 
+   <script type = "text/javascript" src="SecondApp.js"></script>
+
+
 </body>
 </html>
