--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div id ="result">
 
     </div>
-
-    <script type = "text/javascript" src="app.js"></script>
+     
+    <script type = "text/javascript" src="queue.js"></script>
+    
 </body>
 </html>
