--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     </div>
 
-    <script type = "text/javascript" src="Linkedlist.js"></script>
+    <script type = "text/javascript" src="Binarytree.js"></script>
 </body>
 </html>
